--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-241.6KB/s(Youtube:不良林), server: sg-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 捷克-1.50MB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇬🇧 英国-7.84MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: 38.75.136.21, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇨🇳 中国-1.67MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇦 加拿大-1.63MB/s(Youtube:不良林), server: 51.161.118.38, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-818.2KB/s(Youtube:不良林), server: 51.161.118.38, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-15.10MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40208, type: trojan, password: 379105df-ad74-3c8a-ace3-5832de8f973a, sni: trojan.linkdns.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.75.136.21, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: 38.68.134.85, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: 38.68.134.85, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.01MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-241.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 捷克-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇬🇧 英国-7.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-241.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 捷克-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇬🇧 英国-7.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-241.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 捷克-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇬🇧 英国-7.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-241.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 捷克-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇬🇧 英国-7.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-241.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 捷克-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇬🇧 英国-7.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-241.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 捷克-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇬🇧 英国-7.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-241.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 捷克-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇬🇧 英国-7.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
