--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇨🇳 中国-1.67MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇦 加拿大-1.63MB/s(Youtube:不良林), server: 51.161.118.38, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-818.2KB/s(Youtube:不良林), server: 51.161.118.38, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-15.10MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40208, type: trojan, password: 379105df-ad74-3c8a-ace3-5832de8f973a, sni: trojan.linkdns.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-19.88MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 51.161.118.38, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.75.136.21, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-818.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
