--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-15.10MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40208, type: trojan, password: 379105df-ad74-3c8a-ace3-5832de8f973a, sni: trojan.linkdns.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-19.88MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇦 加拿大-1.45MB/s(Youtube:不良林), server: 51.161.118.38, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.75.136.21, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: 38.68.134.85, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-3.01MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇬🇧 英国-2.41MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇨🇦 加拿大-2.07MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-15.91MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40208, type: trojan, password: 379105df-ad74-3c8a-ace3-5832de8f973a, sni: trojan.linkdns.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.48MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2, server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-3.27MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: 38.75.136.21, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 167.88.61.2, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-15.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-19.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.07MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
